src/styles/components/_article.scss
.section {
    width: 100%;

    &__wrapper {
        width: 100%;
        max-width: 1200px;
        margin: 0 auto;
    }
}

.articles {
    width: 100%;
    max-width: 900px;
    margin: 0 auto;

    display: grid;
    grid-template-columns: repeat( auto-fit, minmax(265px, 1fr));

    @media screen and (max-width: 750px) {
        padding-top: 5rem; 
    }
}

.article__item {
    width: 265px;
    margin-bottom: 2.5rem;

    justify-self: center;

    border-radius: 3px;
    background: #FFFFFF;
    border: 1px solid $lightgray;
    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.01);
    transition: box-shadow 150ms; 

    * {margin: 0;}

    @media screen and (min-width: 750px) {
        margin-bottom: 0;

        &:first-child {justify-self: left;}
        &:last-child {justify-self: right;}
    }
    

    a {
        display: block;
        height: 100%;
        text-decoration: none;

        &:visited {
            .article__title, .article__description, .article__social p {
                color: $lightgray;
            }
        }
        
        &:hover {
            .article__title {
                color: $blue;
            }
        }

    }
    
    &:hover {
        box-shadow: 0 0 0 5px $lightgray;
    }
}

.article__image__container {
    display: block;
    width: 100%;
    height: 150px;
    margin-bottom: 1rem;
    padding: 8px 8px 0;
}

.article__image {
    width: 100%;
    height: 100%;

    border-radius: 3px 3px 0 0;
    cursor: pointer;

    object-fit: cover;

    transition: box-shadow 150ms; 
}

.article__overflow {
    overflow: hidden;
    max-height: 95px;
    padding: 0 1rem;
    margin-bottom: 0.5rem;
}

.article__description {
    font-size: 14px;
    color: $darkgray;
}

.article__title {
    font-size: 14px;
    font-weight: 500;
    line-height: 140%;
    color: $black;
    cursor: pointer;

    margin: 0 0 1rem 0;

    transition: color 100ms; 
}

.article__description {
    font-size: 14px;
    line-height: 150%;
    cursor: pointer;

    margin: 0 0 2rem 0;
}

.article__source {
    color: $gray;

    display: flex;
    align-items: center;
    justify-content: flex-start;

    margin: 0;
    padding-top: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;

    font-size: 12px;
    text-transform: uppercase;
    padding-top: 0;
    margin-bottom: 0.5rem;

    svg {margin-right: 0.5rem;}
    p {font-size: 14px;}
}

.article__social {
    width: 100%;
    padding: 12px 16px;
    border-top: 1px solid $lightgray;

    & > p {
        font-size: 12px;
        color: $gray;
    }
}

